--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@shadcn/ui": "^0.0.4",
+    "eventemitter3": "^5.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
